refactor(code with me): 코드 컨밴션에 맞게 IssueController 리팩토링